--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -53,6 +53,21 @@ _ENV = _ENV_
 print(a, b, _G.a) -- 10  0  90
 ```
 
+lua `load` 函数:
+
+```lua
+env = {}
+f, s = load("b = 10; return b", nil, nil, env)
+--f, s = loadfile("test.lua", nil, env)  -- test.lua:  b = 10; return b
+print(f, s)
+print(f()) -- 10
+print(b, env.b) -- nil 10
+```
+
+
+upvalue, 函数外部定义的局部变量(external local variable).
+
+
 `string.gmatch`:
 
 ```lua
@@ -66,8 +81,6 @@ end
 --c	.
 --d
 ```
-
-upvalue, 函数外部定义的局部变量(external local variable).
 
 
 ---
