--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.21](#20190921)
 - [2019.09.20](#20190920)
 - [2019.09.19](#20190919)
 - [2019.09.18](#20190918)
@@ -18,6 +19,29 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.21
+
+- `string.find(str, pattern, start_index, is_plain)`, 返回的是匹配的索引. 
+- `string.match(str, pattern, start_index)`, 返回的是匹配的内容
+- `string.gsub(str, pattern, repl, n)`, 替换n个匹配的内容为repl
+- `string.gmatch(str, pattern)`, 返回一个匹配内容的迭代器
+
+```lua
+s = "some string"
+words = {}
+for w in string.gmatch(s, "%a+") do
+  words[#words + 1] = w
+  print(w)
+end
+
+-- output:
+-- some
+-- string
+```
+
 
 ---
 
