--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.22](#20190922)
 - [2019.09.21](#20190921)
 - [2019.09.20](#20190920)
 - [2019.09.19](#20190919)
@@ -22,9 +23,75 @@
 
 ---
 
+## 2019.09.22
+
+匹配元音字母:
+
+```lua
+s = "apple";
+string.gsub(s, "[AEIOUaeiou]", "")  -- "ppl"	2
+```
+
+lua 正则表达式 使用 `%` 作为转义字符.
+
+lua 正则表达式的特殊字符(magic characters):
+
+`( ) . % + - * ? [ ] ^ $`
+
+lua 正则表达式的预定义字符:
+
+![lua pattern](res/20190922_01.png)
+
+预定义字符的大写表示不匹配的内容.
+
+caret, ^, 脱字号. 表示不是跟随的表达式匹配的内容.
+
+`[正则表达式]`, 表示匹配范围
+
+表示匹配内容重复次数的修饰字符:
+
+![modifiers](res/20190922_02.png)
+
+asterisk, *, 星号
+
+匹配c语言注释(/* xxx */):
+
+```lua
+test = "int x; /* x */  int y; /* y */ // 1"
+print((string.gsub(test, "/%*.-%*/", "")))
+-- int x;   int y;  // 1
+```
+
+匹配两个字符之间的内容: `%b()`, `%b[]`, `%b{}`, `%b<>`, `%bxy`
+
+边界模式, `%f[char-set]`
+
+匹配 后一个字符属于给定的模式 并且 前一个字符不属于模式的 情况
+
+> It matches an empty string only if the next character is in char-set but the previous one is not
+
+匹配单词的末尾, `%f[%W]`
+
+匹配单词的开头, `%f[%w]`
+
+匹配单词the, `%f[%w]the%f[%W]`
+
+```lua
+s = "the anthem is the theme"
+print((string.gsub(s, "%f[%W]", "|")))
+-- the| anthem| is| the| theme|
+print((string.gsub(s, "%f[%w]", "|")))
+-- |the |anthem |is |the |theme
+print((string.gsub(s, "%f[%w]the%f[%W]", "???")))
+-- ??? anthem is ??? theme
+```
+
+
+---
+
 ## 2019.09.21
 
-- `string.find(str, pattern, start_index, is_plain)`, 返回的是匹配的索引. 
+- `string.find(str, pattern, start_index, is_plain)`, 返回的是匹配的索引.
 - `string.match(str, pattern, start_index)`, 返回的是匹配的内容
 - `string.gsub(str, pattern, repl, n)`, 替换n个匹配的内容为repl
 - `string.gmatch(str, pattern)`, 返回一个匹配内容的迭代器
@@ -111,7 +178,7 @@ end
 local main
 main = function()
   N = 8 -- board size
-  
+
   -- check whether position (n,c) is free from attacks
   function isplaceok (a, n, c)
     for i = 1, n - 1 do   -- for each queen already placed
@@ -123,7 +190,7 @@ main = function()
     end
     return true    -- no attacks; place is OK
   end
-  
+
   -- print a board
   function printsolution (a, times)
     io.write(times, ":\n")
@@ -136,11 +203,11 @@ main = function()
     end
     io.write("\n")
   end
-  
+
   local times = 1
   -- add to board 'a' all queens from 'n' to 'N'
   function addqueen (a, n)
-    if n > N then    -- all queens have been placed?      
+    if n > N then    -- all queens have been placed?
       printsolution(a, times)
       times = times + 1
     else  -- try to place n-th queen
@@ -148,13 +215,13 @@ main = function()
         if isplaceok(a, n, c) then
           a[n] = c    -- place n-th queen at column 'c'
           addqueen(a, n + 1)
-        end 
+        end
       end
-    end 
+    end
   end
 
   -- run the program
-  addqueen({}, 1)  
+  addqueen({}, 1)
 end
 ```
 
