--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -86,6 +86,40 @@ print((string.gsub(s, "%f[%w]the%f[%W]", "???")))
 -- ??? anthem is ??? theme
 ```
 
+使用 圆括号 **捕获** 匹配的内容:
+
+```lua
+date = "date is 22/09/2019"
+d, m, y = string.match(date, "(%d+)/(%d+)/(%d+)")
+print(d, m, y, type(d), type(m), type(y))
+-- 22	09	2019	string	string	string
+```
+
+`%1`, 表示匹配的第一项
+
+匹配引号, 引号引用的内容:
+
+```lua
+s = [[then he said: "it's all right"!]]
+q, quotedPart = string.match(s, "([\"'])(.-)%1")
+print(quotedPart)   --> it's all right
+print(q)            --> "
+```
+
+`%n`用在替换字符串上, 交换两个字符的位置:
+
+```lua
+print((string.gsub("hello Lua", "(.)(.)", "%2%1")))
+-- ehll ouLa
+```
+
+trim 操作:
+
+```lua
+string.gsub("\t   Welcome! ", "^%s*(.-)%s*$", "%1")
+-- "Welcome!"	1
+```
+
 
 ---
 
@@ -93,7 +127,7 @@ print((string.gsub(s, "%f[%w]the%f[%W]", "???")))
 
 - `string.find(str, pattern, start_index, is_plain)`, 返回的是匹配的索引.
 - `string.match(str, pattern, start_index)`, 返回的是匹配的内容
-- `string.gsub(str, pattern, repl, n)`, 替换n个匹配的内容为repl
+- `string.gsub(str, pattern, repl, n)`, 替换n个匹配的内容为repl, repl 可以是 table, function, string
 - `string.gmatch(str, pattern)`, 返回一个匹配内容的迭代器
 
 ```lua
