--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.26](#20190926)
 - [2019.09.22](#20190922)
 - [2019.09.21](#20190921)
 - [2019.09.20](#20190920)
@@ -20,6 +21,18 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.26
+
+shortcut, 开源剪辑软件.
+
+https://www.urlgot.cn/, 输入网址, 下载视频的网站
+
+https://zhuanlan.zhihu.com/p/28624383, mac 剪辑软件
+
+
 
 ---
 
