--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -32,7 +32,15 @@ https://www.urlgot.cn/, 输入网址, 下载视频的网站
 
 https://zhuanlan.zhihu.com/p/28624383, mac 剪辑软件
 
+cocos2d-x 节点事件发生顺序:
 
+```
+[LUA-print] onNodeEvent [enter]
+[LUA-print] onNodeEvent [enterTransitionFinish]
+[LUA-print] onNodeEvent [exitTransitionStart]
+[LUA-print] onNodeEvent [exit]
+[LUA-print] onNodeEvent [cleanup]
+```
 
 ---
 
