--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.29](#20190929)
 - [2019.09.26](#20190926)
 - [2019.09.22](#20190922)
 - [2019.09.21](#20190921)
@@ -21,6 +22,19 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.29
+
+使锚点对层生效:
+
+```lua
+layerColor:setIgnoreAnchorPointForPosition(false)
+```
+
+相似含义的属性名: type, class, mode.
+
 
 ---
 
