--- a/trick/note-2019.05.md
+++ b/trick/note-2019.05.md
@@ -422,7 +422,7 @@ local t = { name = "**" }
 local a = { name = "a" }
 setmetatable(a, { __index = t })
 
-rawget(a, "name") -- 获取自己的name属性, 不查找metable
+rawget(a, "name") -- 获取自己的name属性, 不查找metatable
 
 ```
 
