--- a/trick/note-2019.10.md
+++ b/trick/note-2019.10.md
@@ -1,5 +1,89 @@
 
+- [2019.10.30](#20191030)
+- [2019.10.29](#20191029)
+- [2019.10.24](#20191024)
+- [2019.10.23](#20191023)
 - [2019.10.12](#20191012)
+
+---
+
+## 2019.10.30
+
+与自然轴对齐的边界体, 包含所有顶点的最小几何体(对比与坐标轴对齐的边界体).
+
+creator 射线检测:
+
+```js
+onTouchStart (event) {
+    this.touchPos = event.touch.getLocation();
+}
+
+let ray = cc.Camera.main.getRay(this.touchPos);
+let results = cc.geomUtils.intersect.raycast(this.node, ray);
+
+if (results.length > 0) {
+    let distance = results[0].distance;
+
+    let d = cc.vmath.vec3.normalize(cc.v3(), ray.d);
+    let p = cc.vmath.vec3.scaleAndAdd(cc.v3(), ray.o, d, distance);
+
+    this.mesh.position = p; // 设置位置
+}
+```
+
+绕 y 轴, 逆时针旋转:
+
+```js
+cc.tween(node).by(0.5, { eulerAngles: cc.v3(0, 20, 0) }).repeatForever().start()
+```
+
+
+---
+
+## 2019.10.29
+
+`cc.tween`, cocos creator 缓动系统.
+
+https://docs.cocos.com/creator/2.2/manual/zh/scripting/tween.html
+
+creator 的 3d模型节点 需要是同一个 Group 属性, 才能正确通过摄像机显示.
+
+
+---
+
+## 2019.10.24
+
+- 负责绑定脚本的节点
+- 负责渲染的节点
+
+
+---
+
+## 2019.10.23
+
+cocos2dx 调度器加速:
+
+```lua
+cc.Director:getInstance():getScheduler():setTimeScale(3.0)
+```
+
+调整后, 会影响定时函数的调用频率:
+
+```lua
+cc.Director:getInstance():getScheduler():scheduleScriptFunc(function(dt) end, sec, false)
+```
+
+ui 管理器:
+
+- 调整界面层级
+- 监听界面事件
+- 控制界面显示和隐藏
+
+事件管理器:
+
+- 分发事件
+- 事件监听
+- 删除已监听的事件
 
 ---
 
