--- a/trick/note-2019.11.md
+++ b/trick/note-2019.11.md
@@ -1,7 +1,71 @@
 
+- [2019.11.08](#20191108)
+- [2019.11.07](#20191107)
+- [2019.11.06](#20191106)
 - [2019.11.03](#20191103)
 - [2019.11.02](#20191102)
 - [2019.11.01](#20191101)
+
+---
+
+## 2019.11.08
+
+一款开源web聊天工具, https://github.com/yinxin630/fiora
+
+
+Android MediaPlayer
+- https://blog.csdn.net/csdn_of_coder/article/details/63684353
+- https://blog.csdn.net/john_chedan/article/details/80692427
+
+
+creator 物理组件:
+
+- torque > 0, 逆时针旋转
+- torque < 0, 顺时针旋转
+
+设置damping(衰减系数), 让刚体停下来:
+
+`rigidbody.angularDamping = 10000`
+
+触摸坐标转换为世界坐标:
+
+```js
+onTouchEnd(event) {
+    let p = this.camera.getScreenToWorldPoint(event.getLocation())
+},
+```
+
+
+---
+
+## 2019.11.07
+
+降低物理系统的更新步长(`FIXED_TIME_STEP`), 速度迭代次数(`VELOCITY_ITERATIONS`)和位置迭代次数(`POSITION_ITERATIONS`), 更可能出现刚体穿透问题.
+
+RevoluteJoint, 旋转关节组件, 两刚体围绕共同点旋转
+
+DistanceJoint, 距离关节组件, 两个刚体保持距离
+
+PrismaticJoint, 棱柱关节组件, 两刚体位置间的角度固定, 只能在指定轴上滑动
+
+WeldJoint, 焊接关节组件, 根据两刚体的初始角度, 将两个物体上的两个点绑定在一起
+
+WheelJoint, 轮子关节组件
+
+RopeJoint, 绳子关节组件
+
+MotorJoint, 马达关节组件, 控制两刚体的相对运动
+
+---
+
+## 2019.11.06
+
+creator 播放声音的方式:
+
+`cc.AudioSource`
+
+`cc.audioEngine`
+
 
 ---
 
