--- a/trick/note-2019.11.md
+++ b/trick/note-2019.11.md
@@ -1,10 +1,70 @@
 
+- [2019.11.12](#20191112)
+- [2019.11.11](#20191111)
+- [2019.11.10](#20191110)
 - [2019.11.08](#20191108)
 - [2019.11.07](#20191107)
 - [2019.11.06](#20191106)
 - [2019.11.03](#20191103)
 - [2019.11.02](#20191102)
 - [2019.11.01](#20191101)
+
+---
+
+## 2019.11.12
+
+当刚体设定不旋转时, 可以设置子节点根据速度方向旋转.
+
+![rigidbody](res/20191112_01.png)
+
+```js
+    lateUpdate(dt) {
+        if (this._body && this.bulletNode) {
+            const v = this._body.linearVelocity
+            if (Math.abs(v.x) > 0.9 && Math.abs(v.y) > 0.9) {
+                const a = v.angle(cc.Vec2.UP)
+                const d = cc.misc.radiansToDegrees(a)
+
+                // 根据速度方向, 调整贴图旋转角度
+                if (v.x > 0) {
+                    this.bulletNode.angle = -d
+                } else {
+                    this.bulletNode.angle = d
+                }
+            }
+        }
+    },
+```
+
+
+
+---
+
+## 2019.11.11
+
+```
+日曜日是星期天
+月曜日是星期一
+火曜日是星期二
+水曜日是星期三
+木曜日是星期四
+金曜日是星期五
+土曜日是星期六
+```
+
+方向向量, 如果需要对它进行坐标转换, 就要先分别对 头尾坐标 进行转换, 再求转换后的方向向量.
+
+
+---
+
+## 2019.11.10
+
+`rigidbody.getWorldRotation()` 与 `node.angle` 符号相反, 数值相等
+
+节点系统事件, 全局系统事件
+
+> 全局系统事件是指与节点树不相关的各种全局事件，由 cc.systemEvent 来统一派发
+
 
 ---
 
