--- a/trick/note-2019.11.md
+++ b/trick/note-2019.11.md
@@ -1,4 +1,13 @@
 
+- [2019.11.28](#20191128)
+- [2019.11.26](#20191126)
+- [2019.11.22](#20191122)
+- [2019.11.21](#20191121)
+- [2019.11.20](#20191120)
+- [2019.11.18](#20191118)
+- [2019.11.17](#20191117)
+- [2019.11.14](#20191114)
+- [2019.11.13](#20191113)
 - [2019.11.12](#20191112)
 - [2019.11.11](#20191111)
 - [2019.11.10](#20191110)
@@ -8,6 +17,125 @@
 - [2019.11.03](#20191103)
 - [2019.11.02](#20191102)
 - [2019.11.01](#20191101)
+
+---
+
+## 2019.11.28
+
+`Math.random()`: [0, 1)
+
+`(Math.random() - 0.5) * 2`: [-1, 1)
+
+`Math.floor(Math.random() * 6)`: [0, 5]
+
+
+
+---
+
+## 2019.11.26
+
+cocos creator 使用记录:
+
+跳转场景时, 要重置引用过场景节点的变量.
+
+属性面板的回调属性, 不要添加常驻节点的函数.
+
+
+---
+
+## 2019.11.22
+
+浏览器请求分为 简单请求 和 复杂请求.
+
+预检请求, `preflight request`.
+
+`Access-Control-Allow-Origin`, 表示接受指定域名的请求
+
+`Host`, 资源所在位置.
+
+CORS: "跨域资源共享"（Cross-origin resource sharing）
+
+chrome 启动选项: `--disable-web-security--user-data-dir`
+
+**跨域的设置, 需要在资源所在的服务器上设置.**
+
+---
+
+## 2019.11.21
+
+`Access-Control-Allow-Origin`
+
+`Access-Control-Allow-Headers`
+
+`Access-Control-Allow-Credentials`
+
+`Access-Control-Allow-Methods`
+
+
+---
+
+## 2019.11.20
+
+ArrayBuffer, TypedArray, DataView: https://www.cnblogs.com/jixiaohua/p/10714662.html
+
+Blob 类型, 微信小程序里面没有该类型.
+
+ArrayBuffer 转 String:
+
+```js
+function ab2str(arrayBuffer){
+    let unit8Arr = new Uint8Array(arrayBuffer);
+    let encodedString = String.fromCharCode.apply(null, unit8Arr),
+    decodedString = decodeURIComponent(escape((encodedString)));//没有这一步中文会乱码
+    return decodedString;
+}
+```
+
+
+
+---
+
+## 2019.11.18
+
+creator 判断游戏运行的操作系统:
+
+![creator sys](res/20191118_01.jpg)
+
+`cc.sys.platform == cc.sys.WECHAT_GAME`
+
+`wx.openBluetoothAdapter`, 微信开启蓝牙的API在Android与iOS上调用失败的对比:
+
+左: Android; 右: iOS
+
+iOS 多了 state 属性.
+
+![wx.openBluetoothAdapter android 与 ios 对比](res/20191118_02.png)
+
+
+
+---
+
+## 2019.11.17
+
+`cc.Component.EventHandler`, creator 组件回调属性, 用于对接其他脚本的功能函数.
+
+---
+
+## 2019.11.14
+
+对于 cocos creator, 如果一直按住键盘, 会触发 `cc.SystemEvent.EventType.KEY_DOWN` . 如果按住多个键, 则多次触发最后一个按键的事件.
+
+
+---
+
+## 2019.11.13
+
+cc.NodePool
+
+- get()
+- put()
+- size()
+- clear()
 
 ---
 
@@ -78,7 +206,7 @@ Android MediaPlayer
 - https://blog.csdn.net/john_chedan/article/details/80692427
 
 
-creator 物理组件:
+creator 物理组件, 对于`rigidbody.applyTorque(torque, true)`
 
 - torque > 0, 逆时针旋转
 - torque < 0, 顺时针旋转
