--- a/trick/note-2019.12.md
+++ b/trick/note-2019.12.md
@@ -1,6 +1,38 @@
 
+- [2019.12.10](#20191210)
+- [2019.12.08](#20191208)
 - [2019.12.07](#20191207)
 - [2019.12.06](#20191206)
+
+---
+
+## 2019.12.10
+
+iOS 真机调试包:
+- https://github.com/xushuduo/Xcode-iOS-Developer-Disk-Image/releases
+- https://github.com/filsv/iPhoneOSDeviceSupport
+- https://developer.apple.com/documentation/ios_ipados_release_notes/ios_ipados_13_2_release_notes
+
+将调试包放入xcode中, 具体路径:
+
+`/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/DeviceSupport`
+
+
+---
+
+## 2019.12.08
+
+cocos2dx v3.17.2 在 MacOS 15 上系统字体渲染错误的解决办法:
+- 修改 `CCDevice-mac.mm`
+- https://github.com/cocos2d/cocos2d-x/issues/20076
+- https://github.com/minggo/cocos2d-x/commit/a0b46a9754345669b418b3f6f173b678fecacb2e?diff=unified
+
+更新 xcode 11 的时候, 遇到证书过期问题的解决办法:
+
+- 调整系统日期到`2019.10.03`
+- https://stackoverflow.com/questions/12444656/error-during-xcode-component-installation
+
+
 
 ---
 
