--- a/trick/note-2019.12.md
+++ b/trick/note-2019.12.md
@@ -1,8 +1,20 @@
 
+- [2019.12.11](#20191211)
 - [2019.12.10](#20191210)
 - [2019.12.08](#20191208)
 - [2019.12.07](#20191207)
 - [2019.12.06](#20191206)
+
+---
+
+## 2019.12.11
+
+异步逻辑产生的因素:
+
+- 远程调用
+- 定时调度(计时器)
+- 加载(loading)
+- 动画
 
 ---
 
