--- a/trick/note-2019.12.md
+++ b/trick/note-2019.12.md
@@ -1,9 +1,49 @@
 
+- [2019.12.14~2019.12.15](#2019121420191215)
+- [2019.12.12](#20191212)
 - [2019.12.11](#20191211)
 - [2019.12.10](#20191210)
 - [2019.12.08](#20191208)
 - [2019.12.07](#20191207)
 - [2019.12.06](#20191206)
+
+---
+
+## 2019.12.14~2019.12.15
+
+~~cocos creator v2.2 自定义渲染~~, (教程有问题?):
+
+- https://docs.cocos.com/creator/2.2/manual/zh/advanced-topics/custom-render.html
+
+在 v2.2.1 中, 该函数不存在了, `comp.requestRenderData()`
+
+
+自定义渲染使用 Material + effect asset 的方式实现.
+
+
+---
+
+## 2019.12.12
+
+cocos creator 构建原生工程, 需要使用 python V2.7.5以上的版本. 如果安装了python3, 在mac上需要修改 `~/.bash_profile` 文件, 注释掉 python3 的环境.
+
+cocos creator 局域网真机调试地址(需要替换 ip 字段):
+
+`devtools://devtools/bundled/inspector.html?v8only=true&ws={ip}:6086/00010002-0003-4004-8005-000600070008`
+
+<br>
+
+对于cocos creator v2.2.1 开启 websocket server:
+
+1. https://github.com/cocos-creator/cocos2d-x-lite/pull/1921
+
+2. 修改 `ccConfig.h`:
+
+    `#define USE_WEBSOCKET_SERVER 1`
+
+
+
+
 
 ---
 
