--- a/trick/note-2019.12.md
+++ b/trick/note-2019.12.md
@@ -1,4 +1,8 @@
 
+- [2019.12.19](#20191219)
+- [2019.12.18](#20191218)
+- [2019.12.17](#20191217)
+- [2019.12.16](#20191216)
 - [2019.12.14~2019.12.15](#2019121420191215)
 - [2019.12.12](#20191212)
 - [2019.12.11](#20191211)
@@ -6,6 +10,94 @@
 - [2019.12.08](#20191208)
 - [2019.12.07](#20191207)
 - [2019.12.06](#20191206)
+
+---
+
+## 2019.12.19
+
+cocos effect 的 `cc_time` 这个内置变量在 ios, 模拟器 上不生效. 通过给 uniform 变量传入时间值, 解决该问题.
+
+准备 用于渲染的顶点数据 的逻辑在 `assembler-2d` 里, 组件只是用来保存数据.
+
+
+---
+
+## 2019.12.18
+
+从教程/文档中获取`关键字`, 然后再去源码中查找这个`关键字`.
+
+内置 cocos effect :
+
+`default-assets/effects/*.effect`
+
+顺时针, 向右
+
+逆时针, 向左
+
+cocos effect 的 technique -> pass -> properties, 用于关联 uniform 和 显示在 inspector 上.
+
+
+---
+
+## 2019.12.17
+
+cocos effect 头文件在引擎中的路径:
+
+`engine/cocos2d/renderer/build/chunks/shader/*.inc`
+
+
+---
+
+## 2019.12.16
+
+cocos effect 文档(虽然在 creator3d 里面):
+
+- https://docs.cocos.com/creator3d/manual/zh/material-system/effect-syntax.html
+
+Cocos Effect 插件 支持 effect asset 语法的高亮显示.
+
+cocos effect 由 YAML 和 GLSL 组成. YAML 部分定义 **渲染流程**, GLSL 部分定义 **shader**(vs or fs).
+
+关键字: `CCEfect`, `CCProgram`
+
+格式:
+
+```
+CCEffect %{
+
+%}
+
+CCProgram vs %{
+
+%}
+```
+
+
+YAML 参考:
+
+https://docs.cocos.com/creator3d/manual/zh/material-system/yaml-101.html
+
+
+`&`, 声明引用
+
+`*`, 使用引用
+
+`<<`, 继承数据
+
+头文件: `.chunk`, 头文件目录: `asset/chunks`
+
+effect 文件: `.effect`, effect 目录: `asset/effects`
+
+一些内置函数(使用前需要引入头文件):
+
+`CCVertInput`, `CCGetWorldMatrix`, `CCFragOutput`
+
+
+> 规定在 shader 中所有非 sampler 的 uniform 都应以 block 形式声明
+
+
+> Material 资源可以看成是 EffectAsset 在场景中的资源实例
+
 
 ---
 
