--- a/trick/note-2019.12.md
+++ b/trick/note-2019.12.md
@@ -1,4 +1,9 @@
 
+- [2019.12.26](#20191226)
+- [2019.12.25](#20191225)
+- [2019.12.24](#20191224)
+- [2019.12.23](#20191223)
+- [2019.12.20](#20191220)
 - [2019.12.19](#20191219)
 - [2019.12.18](#20191218)
 - [2019.12.17](#20191217)
@@ -10,6 +15,91 @@
 - [2019.12.08](#20191208)
 - [2019.12.07](#20191207)
 - [2019.12.06](#20191206)
+
+---
+
+## 2019.12.26
+
+augmented matrix, 增广矩阵
+
+求逆矩阵:
+- 高斯消元法
+  - https://www.mathsisfun.com/algebra/matrix-inverse-row-operations-gauss-jordan.html
+- 使用伴随矩阵
+  - https://www.mathsisfun.com/algebra/matrix-inverse-minors-cofactors-adjugate.html
+
+scalar, 标量
+
+displacement, 位移
+
+Pythagoras' Theorem, 毕达哥拉斯定理(勾股定理)
+- https://www.mathsisfun.com/pythagoras.html
+
+matrix rank, 矩阵的秩
+- https://www.mathsisfun.com/algebra/matrix-rank.html
+
+linearly independent, 线性无关
+
+eigenvalue, 特征值
+
+eigenvector, 特征向量(characteristic vector), 方向不变
+
+- https://www.mathsisfun.com/algebra/eigenvalue.html
+
+Quadratic Equation, 二次方程
+
+
+---
+
+## 2019.12.25
+
+determinant, 行列式(det)
+
+- https://www.mathsisfun.com/algebra/matrix-determinant.html
+
+adjugate, 伴随矩阵
+
+
+---
+
+## 2019.12.24
+
+绕任意轴旋转的推导:
+
+![rotate about vector](res/20191224_01.png)
+
+![rotate about vector matrix](res/20191224_02.png)
+
+- http://learnwebgl.brown37.net/transformations2/transformations_rotate.html
+- http://learnwebgl.brown37.net/transformations2/transformations_matrices.html
+
+
+使用变换矩阵解释矩阵相乘的顺序不可交换.
+
+reciprocal, 倒数
+
+叉积, cross product:
+
+![a x b](res/20191224_03.png)
+
+
+---
+
+## 2019.12.23
+
+webgl 的数组变量, 需要对每个元素赋值, 不能在初始化的时候赋值.
+
+
+---
+
+## 2019.12.20
+
+cocos effect 如果觉得uv坐标有问题, 可能需要关闭动态图集功能, 使得在 web 平台上的表现符合预期.
+
+```js
+cc.dynamicAtlasManager.enabled = false
+```
+
 
 ---
 
