--- a/note-2020/note-2020.01.md
+++ b/note-2020/note-2020.01.md
@@ -1,5 +1,53 @@
 
+- [2020.01.25](#20200125)
+- [2020.01.06](#20200106)
 - [2020.01.04](#20200104)
+
+---
+
+## 2020.01.25
+
+creator camera 组件的 depth 越小, 越先绘制.
+
+
+---
+
+## 2020.01.06
+
+creator 矩阵索引顺序:
+
+mat4:
+
+$
+    \begin{matrix}
+    0 & 4 & 8  & 12 \\
+    1 & 5 & 9  & 13 \\
+    2 & 6 & 10 & 14 \\
+    3 & 7 & 11 & 15 \\
+    \end{matrix}
+$
+
+mat23:
+
+$
+    \begin{matrix}
+    0 & 2 & 4 \\
+    1 & 3 & 5 \\
+    \end{matrix}
+$
+
+$
+    \begin{matrix}
+    a & c & tx \\
+    b & d & ty \\
+    \end{matrix}
+$
+
+调色盘:
+
+http://www.peise.net/tools/web/
+
+
 
 ---
 
